# Agentic-Space-Time-Photonics

./: README.md
metachat-main/: README.md  verify_contributions.py
metachat-main/film-waveynet/: README.md  scaling_factors.yaml  training_log.csv
metachat-main/film-waveynet/source_code/: config.yaml  consts.py  multi_film_angle_dec_fwdadj_sample_learners.py  multi_film_angle_dec_fwdadj_sample_otf_dataloader.py  multi_film_angle_dec_fwdadj_sample_otf_train.py  phys.py  temporal_physics.py
metachat-main/metachat-aim/: .env.example  README.md  requirements.txt
metachat-main/metachat-aim/agent/: __init__.py  base.py  cot_iterative.py  cot_iterative_materials.py  cot_iterative_tools.py  cot_iterative_tools_materials.py  standard_agent.py  standard_agent_tools.py  temporal_modulation_agent.py
metachat-main/web-app/: .env.example  .gitignore  README.md  main.py  pyproject.toml
metachat-main/web-app/backend/agent/: base.py  cot_iterative_tools_materials.py  standard_agent_tools.py
metachat-main/web-app/backend/core/models/: openai.py
metachat-main/web-app/backend/core/tools/: base.py
metachat-main/web-app/backend/tools/design/: analyze_farfield.py  api.py  config.json  consts_hr.py  design_database.py  designs.db  hash_model.py  models.py  phys.py  stratton_chu_ceviche_rectangle_torch.py  superpixel_optimization_gpu_pared.py
metachat-main/web-app/backend/tools/material_db/: query.py  query_materials.py
metachat-main/web-app/backend/tools/solvers/: scientific_compute.py  symbolic_solver.py
metachat-main/web-app/frontend/: config.js  index.html
(+16 files in other folders)
